--- a/pvc_servlets/.classpath
+++ b/pvc_servlets/.classpath
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-8-openjdk-amd64">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-8-oracle">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0 (2)">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/home/eashan/iitb/CS 387 DB Lab/lab6/ResourcesAssign6/jars/jackson-annotations-2.9.0.jar"/>
+	<classpathentry kind="lib" path="/home/eashan/iitb/CS 387 DB Lab/lab6/ResourcesAssign6/jars/jackson-core-2.9.6.jar"/>
+	<classpathentry kind="lib" path="/home/eashan/iitb/CS 387 DB Lab/lab6/ResourcesAssign6/jars/jackson-databind-2.9.6.jar"/>
+	<classpathentry kind="lib" path="/home/eashan/iitb/CS 387 DB Lab/lab6/ResourcesAssign6/jars/jsoup-1.11.3.jar"/>
+	<classpathentry kind="lib" path="/home/eashan/iitb/CS 387 DB Lab/lab6/ResourcesAssign6/jars/postgresql-42.2.4.jar"/>
+	<classpathentry kind="lib" path="/home/eashan/mywebbase/lib/el-api.jar"/>
+	<classpathentry kind="lib" path="/home/eashan/mywebbase/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="/home/eashan/mywebbase/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
