--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@ pvc_servlets/build/*
 pvc_servlets/src/Config.java
 pvc_servlets/WebContent/META-INF
 pvc_servlets/WebContent/WEB-INF
-.setting
-.project
+pvc_servlets/.project
 .settings/*
 pvc_servlets/.classpath
